# brainhug

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  appveyor.yml
benches/: benchmark.rs
src/: lib.rs  main.rs  preface.c
src/c/: mod.rs  preface.c
src/cpp/: mod.rs  preface.cpp
src/csharp/: mod.rs  preface.cs
src/golang/: mod.rs  preface.go  preface_stdin.go
src/haskell/: mod.rs  preface.hs
src/js/: mod.rs  postface.html  preface.html
src/lua/: mod.rs  preface.lua
src/python/: mod.rs  postface.py  preface.py
src/rust/: mod.rs  preface.rs
