[package]
name = "brainhug"
version = "0.6.1"
authors = ["sn99 <siddharthn.099@gmail.com>"]
edition = "2018"
description = "A simple brainf*ck translator"
repository = "https://github.com/sn99/brainhug"
license = "MIT"
readme = "README.md"
homepage = "https://sn99.github.io/brainhug/"
keywords = ["brainfuck", "interpreter"]
documentation = "https://docs.rs/brainhug"

[badges]
travis-ci = { repository = "sn99/brainhug", branch = "master" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3